Bug 640490 - Adjust vertical alignment of tab labels on Windows. r=dao ui-r=shorlander

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1546,7 +1546,11 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
   background-size: -moz-calc(100% - 2px) -moz-calc(100% - 2px);
   background-repeat: no-repeat;
   margin: 0;
-  padding: 2px 0 4px;
+%ifdef WINSTRIPE_AERO
+  padding: 2px 0 4px; /* XXX remove this once bug 643781 is fixed */
+%else
+  padding: 1px 0 4px;
+%endif
   -moz-border-image: url(tabbrowser/tab.png) 4 3 0 / 4px 3px 0 repeat stretch;
   border-radius: 7px 7px 0 0;
 }
